# leopold-entities

./: README.md  build.sh  leopold-entities.xpr  pyproject.toml
.github/workflows/: dump_baserow.yml
data/indices/: listevent.xml  listletter.xml  listorg.xml  listperson.xml  listplace.xml
indices/: listorg.xml  listperson.xml
json_dumps/: calendar entries.json  calendar_entries.json  contributors.json  editions.json  letters.json  mentioned_letters.json  orgs.json  persons.json  places.json
src/: config.py  denormalize_letters.py  dump_data.py  enrich_places.py  join_tables.py  make_xml.py  tei-template.xml
src/templates/: listcalendar_entrie.xml  listletter.xml  listorg.xml  listperson.xml  listplace.xml
