[project]
name = "leopold-entities"
version = "0.1.0"
description = "Dumps data for Leopold-Briefe-Metadaten"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acdh-arche-assets>=3.28.1",
    "acdh-baserow-pyutils>=0.11.0",
    "acdh-geonames-utils>=0.5.0",
    "acdh-tei-pyutils>=1.6",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
